Fixed z-indexes

--- a/monsterblock.css
+++ b/monsterblock.css
@@ -478,7 +478,7 @@
 	top: 0;
 	margin: 0;
 	cursor: pointer;
-	z-index: 10;
+	z-index: 1;
 }
 .monsterblock header .profile-image img {
 	object-fit: contain;
